[FIX] Catalog are not showing variant product name in 'list' view. Fix CSS

--- a/django_zoook/static/css/layout.css
+++ b/django_zoook/static/css/layout.css
@@ -184,6 +184,7 @@ ul.user-add li a:hover{ background: #232323; color: #fff; padding-left: 11px;}
 
 /* Catalog list */
 #catalog-list { margin-top: 10px; font-size: 18px}
+#catalog-list .product-description { margin-top: 10px; font-size: 13px}
 #catalog-list .level1 {padding-top:10px}
 #catalog-list .level2 { margin-left:10px; font-size: 16px}
 #catalog-list .level3 { margin-left:15px; font-size: 14px}
